<resources>

    <string name="app_name" translatable="false">PUBG Stats</string>
    <!--<string name="title_activity_main22">Main22Activity</string>-->
    <string name="title_solo" translatable="false">Solo</string>
    <string name="title_duo" translatable="false">Duo</string>
    <string name="title_squard" translatable="false">Squad</string>
    <string name="begin_btn">find</string>
    <string name="begin_txt_title">Welcome</string>
    <string name="begin_txt_hint">player name</string>
    <string name="begin_txt_description">To continue, enter the player name to collect server statistics. Thank you in
        advance
    </string>
    <string name="item_txt_name" translatable="false">PLAYER123</string>
    <string name="list_txt_title">Choose a player name</string>
    <string name="stat_txt_title" translatable="false">PlayerName</string>
    <string name="stat_txt_rank">Ranking</string>
    <string name="stat_txt_kills">Kills</string>
    <string name="stat_txt_graphs">Graphs</string>
    <string name="stat_txt_other">Other</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- constant strings to choose regime-->
    <string name="duo" translatable="false">duo</string>
    <string name="duo_fpp" translatable="false">duo-fpp</string>
    <string name="solo" translatable="false">solo</string>
    <string name="solo_fpp" translatable="false">solo-fpp</string>
    <string name="squad" translatable="false">squad</string>
    <string name="squad_fpp" translatable="false">squad-fpp</string>
    <!-- errors-->
    <string name="List_error">Oops! It seems you have not added a single player to view statistics. Please go and enter
        your nickname to get data.
    </string>
    <string name="Text_erroe">Your internet connection is not stable. Reconnect to network to continue.</string>

    <!-- strings for statistics -->
    <string name="assists">Assists</string>
    <string name="bestRankPoint">Best rank point</string>
    <string name="dBNOs">dBNOs</string>
    <string name="dailyKills">Daily kills</string>
    <string name="dailyWins">Daily wins</string>
    <string name="boosts">Boosts</string>
    <string name="damageDealt">Damage dealt</string>
    <string name="days">Days</string>
    <string name="headshotKills">Headshots</string>
    <string name="heals">Heals</string>
    <string name="killPoints">Kill points</string>
    <string name="kills">Kills</string>
    <string name="longestKill">Longest kill</string>
    <string name="longestTimeSurvived">Longest time survived</string>
    <string name="losses">Losses</string>
    <string name="maxKillStreaks">Max kill streak</string>
    <string name="mostSurvivalTime">Most survival time</string>
    <string name="rankPoints">Rank points</string>
    <string name="rankPointsTitle" translatable="false">rankPointsTitle</string>
    <string name="revives">Revives</string>
    <string name="rideDistance">Ride distance</string>
    <string name="roadKills">Road kills</string>
    <string name="roundMostKills">Most kills per round</string>
    <string name="roundsPlayed">Rounds played</string>
    <string name="suicides">Suicides</string>
    <string name="swimDistance">Swim distance</string>
    <string name="teamKills">Teamkills</string>
    <string name="timeSurvived">Time survived</string>
    <string name="top10s">Top10\'s</string>
    <string name="vehicleDestroys">Vehicle destroys</string>
    <string name="weaponsAcquired">Weapons acquired</string>
    <string name="weeklyKills">Weekly kills</string>
    <string name="winPoints">Win points</string>
    <string name="wins">Wins</string>
    <string name="show_season_stats">Show statistics</string>
    <string name="default_value" translatable="false">-</string>
    <string name="error">Error!</string>
    <string name="ok">OK</string>
    <string name="enter_player_name">Enter player name!</string>

    <string name="current_season">CURRENT SEASON</string>
    <string name="prev_season">PREVIOUS SEASON</string>
</resources>
