<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/color_background_main" android:id="@+id/parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/begin_txt_title"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView2"
            android:layout_marginTop="110dp" app:layout_constraintTop_toTopOf="parent"
    />
    <ImageView android:layout_width="200dp"
               android:layout_gravity="center_horizontal"
               android:src="@drawable/icon"
               android:contentDescription="@string/begin_txt_title"
               android:layout_height="269dp"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginStart="16dp"
               android:layout_marginEnd="16dp"
               app:layout_constraintEnd_toEndOf="parent"
               android:id="@+id/imageView" android:layout_marginTop="8dp"
               app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:alpha="0.5"
            android:text="@string/begin_txt_description" android:id="@+id/textView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_login"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:textColorHint="@color/colorAccent"
            app:boxStrokeColor="@color/colorAccent"
            android:layout_width="270dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"

            app:boxStrokeWidth="3dp" app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login"
                android:hint="@string/begin_txt_hint"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="@color/colorAccent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/begin_btn"
            android:id="@+id/btn_find"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/layout_login"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>